refactor: createdAt 정렬 로직 추가 (사용x, redis stream에서 통합 관리)