@@ -1,7 +1,9 @@
 package com.team1.otvoo.sse.repository;
 
 import com.team1.otvoo.sse.model.SseMessage;
+import java.time.Instant;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -19,8 +21,8 @@ import org.springframework.stereotype.Repository;
 @Repository
 public class SseEventRepository {
 
-  @Value("${sse.event-ttl-seconds}")
-  private long eventTilSeconds;
+  @Value("${sse.event-ttl-days}")
+  private long eventTtlDays;
 
   private final RedisTemplate<String, Object> redisTemplate;
 
@@ -30,12 +32,13 @@ public class SseEventRepository {
   // 새로운 이벤트 저장
   public void save(SseMessage sseMessage) {
     String eventId = sseMessage.getEventId().toString();
-    long now = System.currentTimeMillis();
+    Instant createdAt = sseMessage.getCreatedAt();
+    long score = createdAt.toEpochMilli();
 
-    redisTemplate.opsForZSet().add(EVENT_STREAM_KEY, eventId, now);
+    redisTemplate.opsForZSet().add(EVENT_STREAM_KEY, eventId, score);
 
     String eventDataKey = EVENT_DATA_KEY_PREFIX + eventId;
-    redisTemplate.opsForValue().set(eventDataKey, sseMessage, eventTilSeconds, TimeUnit.SECONDS);
+    redisTemplate.opsForValue().set(eventDataKey, sseMessage, eventTtlDays, TimeUnit.DAYS);
 
     // 로그
     Object storedMessage = redisTemplate.opsForValue().get(eventDataKey);
@@ -47,20 +50,20 @@ public class SseEventRepository {
   }
 
   // 유실된 데이터 조회
-  // 최대 이벤트 개수 제한 등 다른 전략 추가할지 고민
   public List<SseMessage> findAllByEventIdAfterAndReceiverId(UUID lastEventId, UUID receiverId) {
     // lastEventId에 해당하는 score(시간) 찾기
     Double lastEventScore = redisTemplate.opsForZSet().score(EVENT_STREAM_KEY, lastEventId.toString());
 
     if (lastEventScore == null) {
-      return List.of();
+      log.warn("lastEventId {}의 score를 찾을 수 없음", lastEventId);
+      return Collections.emptyList();
     }
 
     // lastEventId 이후의 모든 eventId를 조회
     Set<Object> eventIds = redisTemplate.opsForZSet().rangeByScore(EVENT_STREAM_KEY, lastEventScore, Double.MAX_VALUE);
 
     if (eventIds == null || eventIds.isEmpty()) {
-      return List.of();
+      return Collections.emptyList();
     }
 
     // MGET을 위한 키 목록 생성
@@ -77,12 +80,13 @@ public class SseEventRepository {
     // score가 같을 경우 eventId의 사전 순(lexicographical order)으로 정렬
     // 현재 로직은 lastEventId와 같은 score를 가진 모든 이벤트를 가져온 뒤 lastEventId만 제외
     // → 순서는 약간 바뀔 수 있지만, 같은 시간에 발생한 다른 이벤트가 누락되지는 않음
-    // 이벤트 순서를 더 엄격하게 보장하고 싶으면 필터 조건 추가 고려해볼 것 (ex. createdAt)
+    // 이벤트 순서를 더 엄격하게 보장하고 싶으면 UUIDv7를 eventId로 사용하여 정렬할 것
     return eventDataList.stream()
         .filter(Objects::nonNull)
         .map(data -> (SseMessage) data)
         .filter(sseMessage -> !sseMessage.getEventId().equals(lastEventId))
         .filter(sseMessage -> sseMessage.isReceivable(receiverId))
+        .sorted(Comparator.comparing(SseMessage::getCreatedAt)) // multiGet으로 인해 뒤섞인 데이터 정렬
         .toList();
   }
 
